<resources>
    <string name="app_name">UdacityPracticalQuiz1</string>
    <string name="username">Username</string>
    <string name="next_btn_text">Next</string>
    <string name="write_something_about_yourself">Write something about yourself</string>
    <string name="email">Email</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="demousername">DemoUserName</string>
    <string name="demoemail">DemoEmail</string>
    <string name="this_is_the_demo_description_and_will_replace_with_the_original_ones">This is the Demo description and will replace with the original ones</string>
    <string name="details">Details</string>
</resources>
