<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.scholars.udacitypracticalquiz1.DetailsActivity"
    tools:showIn="@layout/activity_details"
    android:padding="16dp"
    android:background="@drawable/bg_gradient">

    <ImageView
        android:id="@+id/profile_img"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile_img"
        android:layout_width="96dp"
        android:layout_height="96dp"
        />
    
    <TextView
        android:id="@+id/profile_name_txt"
        android:layout_below="@+id/profile_img"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryText"
        android:textSize="24sp"
        android:text="@string/demousername"/>

    <TextView
        android:id="@+id/profile_email_txt"
        android:layout_below="@+id/profile_name_txt"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorSecondaryText"
        android:textSize="18sp"
        android:text="@string/demoemail"/>

    <TextView
        android:id="@+id/profile_summary_txt"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_email_txt"
        android:text="@string/this_is_the_demo_description_and_will_replace_with_the_original_ones"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryText" />
</RelativeLayout>
